# modern-portfolio-theory

./: .flake8  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
crateris/: __init__.py  version_crateris.py
