[bumpversion]
current_version = 0.1.0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-(?P<release>\w+)\.(?P<build>\d+))?
serialize = 
	{major}.{minor}.{patch}-{release}.{build}
	{major}.{minor}.{patch}
commit = True
tag = True

[bumpversion:file:crateris/version_crateris.py]

[metadata]
name = crateris
author = Rafael Hernandez Murcia
author_email = hernandezmurciarafael@gmail.com
description = Learning how to build python packages
long_description_content_type = 'text/markdown'
long_description = file: README.md
version = attr: crateris.__version__
url = https://github.com/hernandezmurcia/modern-portfolio-theory
keywords = 
	modern portfolio theory
	python packages
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Science/Finance/Engineering/Data
	Programming Language :: Python :: 3
	Topic :: Engineering/Finance
license_files = 
	LICENSE

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires = 

[options.extras_require]
tests = 
	pytest
	flake8
	coverage
